mobile header done

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
       Frontend Mentor | REST Countries API with color theme switcher
     </title>
   </head>
-  <body>
+  <body
+    class="bg-lightBackground dark:bg-darkBackground text-lightText dark:text-darkText"
+  >
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
