--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
       Frontend Mentor | REST Countries API with color theme switcher
     </title>
   </head>
-  <body
-    class="bg-lightBackground dark:bg-darkBackground text-lightText dark:text-darkText"
-  >
+  <body class="bg-seasalt dark:bg-gunmetal text-night dark:text-white">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
